fixing horizontal scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,6 @@
   box-sizing: border-box;
 }
 
-
-
 :root {
   --color-very-dark-blue: hsl(233, 47%, 7%);
   --color-dark-desaturated-blue: hsl(244, 38%, 16%);
@@ -14,13 +12,6 @@
   font-size: 0.9375em;
 }
 
-body {
-  width: 99vw;
-  max-width: 375px;
-  background: var(--color-very-dark-blue);
-  color: var(--color-white);
-}
-
 @font-face {
   font-family: 'Inter';
   src: url('https://fonts.google.com/specimen/Inter');
@@ -28,16 +19,26 @@ body {
   font-style: normal;
 }
 
+.larger {
+  display: none;
+}
 
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: var(--color-very-dark-blue);
+  color: var(--color-white);
+}
 
 .container {
+  width: 100%;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  margin: 3em 1em 3em 1em;
-  
+  padding: 1em;
 }
 
 /* Header */
@@ -47,8 +48,8 @@ header {
 }
 
 .header-image {
-  width: 99vw;
-  max-width: 300px;
+  display: flex;
+  width: 100%;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
@@ -57,10 +58,10 @@ header {
 /* Main-content */
 
 .main-content {
+  display: flex;
   margin-top: 0;
   background-color: var(--color-dark-desaturated-blue);
-  width: 99vw;
-  max-width: 300px;
+  width: 100%;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
 }
@@ -123,15 +124,15 @@ header {
   padding: 0;
 }
 
-
-
-
 /* footer and attribution */
 
 .attribution { 
+  font-family: Inter;
   font-size: 11px; text-align: center; 
+  margin-bottom: 1em;
 }
 
 .attribution a { 
   color: hsl(228, 45%, 44%); 
 }
+
